--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "1.6.1",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.24.1",
     "del-cli": "^1.1.0",
     "html-webpack-plugin": "^2.30.1",
@@ -44,8 +45,11 @@
   "dependencies": {
     "babel-plugin-emotion": "^8.0.12",
     "emotion": "^8.0.12",
+    "express": "^4.16.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-emotion": "^8.0.12"
+    "react-emotion": "^8.0.12",
+    "react-router": "^3.2.0",
+    "react-router-dom": "^4.2.2"
   }
 }
