add dot-env package and remove dummy json resp

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "babel-plugin-emotion": "^8.0.12",
+    "dotenv": "^4.0.0",
     "emotion": "^8.0.12",
     "express": "^4.16.2",
     "react": "^16.2.0",
