--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^16.2.0",
     "react-emotion": "^8.0.12",
     "react-router": "^3.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "url": "^0.11.0"
   }
 }
