--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "del-cli": "^1.1.0",
     "html-webpack-plugin": "^2.30.1",
     "http-server": "^0.10.0",
@@ -43,6 +44,7 @@
     "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-plugin-emotion": "^8.0.12",
     "dotenv": "^4.0.0",
     "emotion": "^8.0.12",
@@ -53,5 +55,6 @@
     "react-router": "^3.2.0",
     "react-router-dom": "^4.2.2",
     "url": "^0.11.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
